--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>《原理与源码解析》</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       //标题
-      name: '原理设计与源码分析',
+      name: '原理与源码解析',
       repo: 'https://github.com/HNov/sourceCodeAnalysis'
       //最大支持渲染的标题层级
       maxLevel: 5,
