--- a/index.html
+++ b/index.html
@@ -14,38 +14,33 @@
     window.$docsify = {
       //标题
       name: '原理与源码解析',
-      repo: 'https://github.com/HNov/sourceCodeAnalysis'
+      repo: ''
+      themeColor: '#36bc98',
+      loadSidebar: true,
       //最大支持渲染的标题层级
-      maxLevel: 5,
-      homepage: 'README.md',
-      coverpage: true,
+      //maxLevel: 5,
+      //homepage: 'README.md',
+      //coverpage: true,
       //切换页面后是否自动跳转到页面顶部
       auto2top: true,
       //全文搜索
-      search: {
-        //maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-        paths: 'auto',
-        placeholder: '搜索',
-        noData: '找不到结果',
-        // 搜索标题的最大程级, 1 - 6
-        depth: 3,
-      },
-      plugins: [
-        EditOnGithubPlugin.create('https://github.com/Snailclimb/JavaGuide-Interview/blob/master/')
-      ],
+     search: {
+            maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+            noData: '找不到结果',//搜索不到结果时显示
+            paths: 'auto',//自动
+            placeholder: '搜索一下',//搜索框提示
+        },
+        copyCode: {
+          buttonText : '点击复制代码',
+          errorText  : '复制出错',
+          successText: '复制成功'
+        }
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <!--Java代码高亮-->
-  <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
-  <!--全文搜索,直接用官方提供的无法生效-->
-  <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
-  <!-- 复制到剪贴板 -->
-  <script src="//unpkg.com/docsify-copy-code"></script>
-  <!-- 图片缩放 -->
-  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
-  <!-- 字数统计 -->
-  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-
+ <script src="https://cdn.bootcss.com/docsify/4.10.2/docsify.min.js"></script>
+ <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/search.js"></script>
+  <script src="/sourceCodeAnalysis/static/prism-java.js"></script>
+  <script src="/sourceCodeAnalysis/static/docsify-copy-code.min.js"></script>
+  <script src="/sourceCodeAnalysis/static/tctip-1.0.0.min.js"></script>
 </body>
 </html>
