--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>原理与源码解析</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+ <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="/sourceCodeAnalysis/static/vue.css">
+  <link rel="stylesheet" type="text/css" href="/static/vue.css">
 </head>
 <body>
   <a href="https://github.com/HNov/sourceCodeAnalysis" target="_blank" class="github-corner" aria-label="View source on Github"><svg viewBox="0 0 250 250" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
@@ -16,9 +16,10 @@
     window.$docsify = {
       //标题
       name: '原理与源码解析',
-      repo: ''
+      repo: '',
       themeColor: '#36bc98',
       loadSidebar: true,
+      loadSidebar: '_sidebar.md',
       //最大支持渲染的标题层级
       //maxLevel: 5,
       //homepage: 'README.md',
@@ -41,12 +42,12 @@
   </script>
   <script src="https://cdn.bootcss.com/docsify/4.10.2/docsify.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/search.js"></script>
-  <script src="/sourceCodeAnalysis/static/prism-java.js"></script>
-  <script src="/sourceCodeAnalysis/static/docsify-copy-code.min.js"></script>
-  <script src="/sourceCodeAnalysis/static/tctip-1.0.0.min.js"></script>
+  <script src="/static/prism-java.js"></script>
+  <script src="/static/docsify-copy-code.min.js"></script>
+  <script src="/static/tctip-1.0.0.min.js"></script>
   <script>
     new tctip({
-        top: '20%',
+        top: '30%',
         button: {
             id: 9,
             type: 'dashang',
@@ -54,9 +55,9 @@
         list: [
           {
               type: 'wechat',
-              qrImg: '/sourceCodeAnalysis/static/wechat.jpg'
-          }
+              qrImg: '/static/img/wechat.jpg'          }
         ]
-    }).init()</script>
+    }).init()
+  </script>
 </body>
 </html>
