--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       loadSidebar: true,
       loadSidebar: '_sidebar.md',
       //最大支持渲染的标题层级
-      //maxLevel: 5,
-      //homepage: 'README.md',
-      //coverpage: true,
+      maxLevel: 5,
+      homepage: 'README.md',
+      coverpage: true,
       //切换页面后是否自动跳转到页面顶部
       auto2top: true,
       //全文搜索
-     search: {
+      search: {
             maxAge: 86400000, // 过期时间，单位毫秒，默认一天
             noData: '找不到结果',//搜索不到结果时显示
             paths: 'auto',//自动
