--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         list: [
           {
               type: 'wechat',
-              qrImg: '/static/img/wechat.jpg'          }
+              qrImg: '/sourceCodeAnalysis/static/img/wechat.jpg'          }
         ]
     }).init()
   </script>
