--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       //最大支持渲染的标题层级
       maxLevel: 5,
       homepage: 'README.md',
-      coverpage: true,
+      // coverpage: true,
       //切换页面后是否自动跳转到页面顶部
       auto2top: true,
       //全文搜索
