--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           //最上面的文字
             headText: "欢迎加入技术群交流^_^",
             //侧边栏文本
-            siderText: "公告 & 微信群",
+            siderText: "公告 & 微信群 & 博客",
             //侧边栏文本高度调整
             siderTextTop: "-72px",
             //侧边栏背景颜色
@@ -48,7 +48,8 @@
       name: '原理与源码解析',
       repo: '',
       themeColor: '#36bc98',
-      loadSidebar: true,
+      //是否自定义侧边栏
+      loadSidebar: false,
       loadSidebar: '_sidebar.md',
       //最大支持渲染的标题层级
       maxLevel: 5,
