--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script>
     window.tctipConfig = {
           //最上面的文字
-            headText: "欢迎加入技术群交流^_^",
+            headText: "欢迎加入技术群交流 ^_^",
             //侧边栏文本
             siderText: "公告 & 微信群 & 博客",
             //侧边栏文本高度调整
@@ -31,7 +31,7 @@
             siderTop:"30%",
             // siderTop:"118px",
             //底部文字
-            buttomText:"了解更多",
+            buttomText:"博客(gitee)",
             //底部文字链接
             buttomLink:"https://gitee.com/HNov/sourceCodeAnalysis",
             list:{  // ../assets/logo.png
