--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       themeColor: '#36bc98',
       //是否自定义侧边栏
       loadSidebar: false,
-      loadSidebar: '_sidebar.md',
+      // loadSidebar: '_sidebar.md',
       //最大支持渲染的标题层级
       maxLevel: 5,
       homepage: 'README.md',
